UX-318: fix height of favorite so it aligns properly when centered vertically

--- a/jenkins-design-language/less/components/favorite.less
+++ b/jenkins-design-language/less/components/favorite.less
@@ -15,6 +15,7 @@
   span {
     display: block;
     cursor: pointer;
+    height: 24px;
 
     &:before {
       content: '';
